Properly stop the server